# data_analysis_service

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt  requirments.txt  ruff.toml
dags/: .env.example  data_evaluation.py  data_preparation.py  data_validation.py  get_prediction.py  get_results.py  model_metrics.py  model_train.py  start_observer.py
dags/conf/: data_config.py  model_config.py
dags/digital_twin/configs/: constants.py  models_conf.py
dags/digital_twin/data_preparation/: splitting_data.py
dags/digital_twin/evaluation/: data_metrics.py
dags/digital_twin/load_data/: load_from_file.py
dags/digital_twin/metrics/: classification_metrics.py  regression_metrics.py
dags/digital_twin/models/: base_model.py  catboost_model.py  linear_regression_model.py  logistic_regression_model.py
dags/tasks/: data_evaluation_tasks.py  data_tasks.py  data_validation_tasks.py  model_tasks.py  observer_tasks.py
notebooks/: Demo_CatBoost.ipynb  Demo_Linear_Regression.ipynb  Demo_Logistic_Regression.ipynb
pgadmin/: server.json
scripts/: add_connections.py  add_role_permissions.py  add_variables.py  airflow_setup_users.py
utils/: generate_car_data.py  graphics.py
