[project]
name = "data_analisys_service"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksey Kuznetsov"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ruff (>=0.11.12,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
